--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
     "start": "babel-node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Jean-Baptiste Pasquier",
+  "author": "Arnaud Monachon, Camille Fontaine, Sylvain Labarre",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^0.8.7",
     "body-parser": "",
     "cors": "",
     "express": "",
+    "formidable": "^1.0.17",
+    "fs-extra": "^0.30.0",
+    "imagemagick": "^0.1.3",
     "jsonwebtoken": "",
     "method-override": "",
+    "mmmagic": "^0.4.5",
     "mongoose": "",
-    "morgan": ""
+    "morgan": "",
+    "nodemailer": "^2.6.4",
+    "quickthumb": "0.0.12"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
